[chore] 이미지 최적화 #60

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ko-KR">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -331,7 +330,7 @@
                 <div class="product_img_container">
                   <img src="./client/assets/thumbnail/product01.png" class="product_img" alt="탱탱쫄면 4개입" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -345,7 +344,7 @@
                 <div class="product_img_container">
                   <img src="./client/assets/thumbnail/product02.png" class="product_img" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -359,7 +358,7 @@
                 <div class="product_img_container">
                   <img src="./client/assets/thumbnail/product03.png" class="product_img" alt="밀키퀸 현미 4kg" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -373,7 +372,7 @@
                 <div class="product_img_container">
                   <img src="./client/assets/thumbnail/product04.png" class="product_img" alt="스프레이형과 기본형의 세탁세" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info_sale">
@@ -389,7 +388,7 @@
                 <div class="product_img_container">
                   <img src="./client/assets/thumbnail/product01.png" class="product_img" alt="탱탱쫄면 4개입" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -403,7 +402,7 @@
                 <div class="product_img_container">
                   <img src="./client/assets/thumbnail/product02.png" class="product_img" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -417,7 +416,7 @@
                 <div class="product_img_container">
                   <img src="./client/assets/thumbnail/product03.png" class="product_img" alt="밀키퀸 현미 4kg" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -431,7 +430,7 @@
                 <div class="product_img_container">
                   <img src="./client/assets/thumbnail/product04.png" class="product_img" alt="스프레이형과 기본형의 세탁세" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info_sale">
@@ -447,7 +446,7 @@
                 <div class="product_img_container">
                   <img src="./client/assets/thumbnail/product01.png" class="product_img" alt="탱탱쫄면 4개입" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -461,7 +460,7 @@
                 <div class="product_img_container">
                   <img src="./client/assets/thumbnail/product02.png" class="product_img" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -475,7 +474,7 @@
                 <div class="product_img_container">
                   <img src="./client/assets/thumbnail/product03.png" class="product_img" alt="밀키퀸 현미 4kg" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -489,7 +488,7 @@
                 <div class="product_img_container">
                   <img src="./client/assets/thumbnail/product04.png" class="product_img" alt="스프레이형과 기본형의 세탁세" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info_sale">
@@ -549,11 +548,11 @@
         <div class="swiper_recommend_products swiper_sale">
           <div class="swiper-wrapper recommend_products_wrapper">
             <div class="swiper-slide recommend_products_slide">
-              <a href="/">
+              <a href="./client/page_productDetail_my.html">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
+                  <img src="./client/assets/thumbnail/product01.png" class="product_img" alt="탱탱쫄면 4개입" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -565,9 +564,9 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
+                  <img src="./client/assets/thumbnail/product02.png" class="product_img" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -579,9 +578,9 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
+                  <img src="./client/assets/thumbnail/product03.png" class="product_img" alt="밀키퀸 현미 4kg" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -593,9 +592,9 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
+                  <img src="./client/assets/thumbnail/product04.png" class="product_img" alt="스프레이형과 기본형의 세탁세" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info_sale">
@@ -607,11 +606,11 @@
               </a>
             </div>
             <div class="swiper-slide recommend_products_slide">
-              <a href="/">
+              <a href="./client/page_productDetail_my.html">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
+                  <img src="./client/assets/thumbnail/product01.png" class="product_img" alt="탱탱쫄면 4개입" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -623,9 +622,9 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
+                  <img src="./client/assets/thumbnail/product02.png" class="product_img" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -637,9 +636,9 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
+                  <img src="./client/assets/thumbnail/product03.png" class="product_img" alt="밀키퀸 현미 4kg" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -651,9 +650,9 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
+                  <img src="./client/assets/thumbnail/product04.png" class="product_img" alt="스프레이형과 기본형의 세탁세" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info_sale">
@@ -665,11 +664,11 @@
               </a>
             </div>
             <div class="swiper-slide recommend_products_slide">
-              <a href="/">
+              <a href="./client/page_productDetail_my.html">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
+                  <img src="./client/assets/thumbnail/product01.png" class="product_img" alt="탱탱쫄면 4개입" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -681,9 +680,9 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
+                  <img src="./client/assets/thumbnail/product02.png" class="product_img" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -695,9 +694,9 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
+                  <img src="./client/assets/thumbnail/product03.png" class="product_img" alt="밀키퀸 현미 4kg" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info">
@@ -709,9 +708,9 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
+                  <img src="./client/assets/thumbnail/product04.png" class="product_img" alt="스프레이형과 기본형의 세탁세" />
                   <button type="button">
-                    <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                    <img src="./client/assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
                   </button>
                 </div>
                 <div class="product_info_sale">
