[refac] 장바구니 접근성 고려해 마크업 및 기능 리팩토링 #62

--- a/client/cart.html
+++ b/client/cart.html
@@ -312,8 +312,8 @@
         <div class="cart_container">
           <div class="cart_list_box">
             <div class="select_menu">
-              <input type="checkbox" id="all_check" name="all" checked />
-              <label for="all_check">전체선택 (0/1)</label>
+              <input type="checkbox" id="all_check2" name="all_check" checked />
+              <label for="all_check2">전체선택 (0/1)</label>
 
               <button class="select_delete">선택삭제</button>
             </div>
@@ -333,8 +333,13 @@
 
                 <ul class="product_list_box">
                   <li class="product_list">
-                    <input type="checkbox" id="sub_check" name="list" checked />
-                    <label for="sub_check" class="a11yHidden">선택하기</label>
+                    <input
+                      type="checkbox"
+                      id="sub_check1"
+                      name="sub_check"
+                      checked
+                    />
+                    <label for="sub_check1" class="a11yHidden">선택하기</label>
 
                     <a href="#" class="product_img">
                       <img
@@ -377,8 +382,13 @@
                   </li>
 
                   <li class="product_list">
-                    <input type="checkbox" id="sub_check" name="list" checked />
-                    <label for="sub_check" class="a11yHidden">선택하기</label>
+                    <input
+                      type="checkbox"
+                      id="sub_check2"
+                      name="sub_check"
+                      checked
+                    />
+                    <label for="sub_check2" class="a11yHidden">선택하기</label>
 
                     <a href="#" class="product_img">
                       <img
@@ -437,8 +447,13 @@
 
                 <ul class="product_list_box">
                   <li class="product_list">
-                    <input type="checkbox" id="sub_check" name="list" checked />
-                    <label for="sub_check" class="a11yHidden">선택하기</label>
+                    <input
+                      type="checkbox"
+                      id="sub_check3"
+                      name="sub_check"
+                      checked
+                    />
+                    <label for="sub_check3" class="a11yHidden">선택하기</label>
 
                     <a href="#" class="product_img">
                       <img
@@ -478,8 +493,13 @@
 
             <div class="cart_list_box">
               <div class="select_menu">
-                <input type="checkbox" id="all_check" name="all" checked />
-                <label for="all_check">전체선택 (0/1)</label>
+                <input
+                  type="checkbox"
+                  id="all_check1"
+                  name="all_check"
+                  checked
+                />
+                <label for="all_check1">전체선택 (0/1)</label>
 
                 <button class="select_delete">선택삭제</button>
               </div>
