[refac] 상품리스트 페이지 마크업 리팩토링 및 px 을 rem으로 재지정 #62

--- a/client/productList.html
+++ b/client/productList.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/productList.css" />
     <link rel="stylesheet" href="./css/common.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script defer src="./js/productList/productList.js" type="module"></script>
+    <script src="./js/productList/productList.js" type="module"></script>
     <title>마켓칼리</title>
   </head>
 
@@ -325,7 +325,6 @@
                     src="./assets/icons/list/slide_down.svg"
                     class="category_button_icon"
                     alt="카테고리 닫힘 상태"
-                    name="카테고리 버튼"
                   />
                 </button>
 
@@ -412,7 +411,6 @@
                     src="./assets/icons/list/slide_down.svg"
                     class="category_button_icon"
                     alt="브랜드 닫힘 상태"
-                    name="브랜드 버튼"
                   />
                 </button>
 
@@ -499,7 +497,6 @@
                     src="./assets/icons/list/slide_down.svg"
                     class="category_button_icon"
                     alt="가격 닫힘 상태"
-                    name="가격 버튼"
                   />
                 </button>
 
@@ -540,7 +537,6 @@
                     src="./assets/icons/list/slide_down.svg"
                     class="category_button_icon"
                     alt="유형 닫힘 상태"
-                    name="유형 버튼"
                   />
                 </button>
 
@@ -569,7 +565,6 @@
                     src="./assets/icons/list/slide_down.svg"
                     class="category_button_icon"
                     alt="특정상품 제외 닫힘 상태"
-                    name="틍점상품 제외 버튼"
                   />
                 </button>
 
