[chore] 상품 후기 파트 마크업 수정 #55

--- a/client/page_productDetail_my.html
+++ b/client/page_productDetail_my.html
@@ -2,8 +2,8 @@
 <html lang="ko-KR">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>마켓칼리</title>
   <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/style.css" />
@@ -12,11 +12,19 @@
   <link rel="stylesheet" href="./css/color.css" />
   <link rel="stylesheet" href="./css/page_productDetail_my.css"> 
   <link rel="stylesheet" href="./css/page_productDetail_dr.css"> 
-  <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script type="module" src="./js/productDetail/productDetail_dr.js"></script>
   <script defer src="./js/productDetail/productDetail_my.js"></script>
-  <script defer src="./js/productDetail/productDetail_dr.js"></script>
   <script src="./js/main.js" type="module"></script>
-  <title>마켓칼리</title>
+  <!-- Initialize Swiper -->
+<script type="module">
+  const swiper = new Swiper(".mySwiper", {
+    navigation: {
+      nextEl: ".swiper-button-next",
+      prevEl: ".swiper-button-prev",
+    },
+  });
+</script>
 </head>
 
 <body>
@@ -1295,4 +1303,5 @@
   </footer>
 
 </body>
+
 </html>
