--- a/client/page_productDetail_my.html
+++ b/client/page_productDetail_my.html
@@ -13,8 +13,8 @@
   <link rel="stylesheet" href="./css/page_productDetail_my.css"> 
   <link rel="stylesheet" href="./css/page_productDetail_dr.css"> 
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-  <script defer src="./js/productDetail/productDetail_my.js"></script> <!-- getNode같은 걸 가져와서 쓰려면 type="module"을 적어야함 -->
-  <script defer src="./js/productDetail/productDetail_dr.js"></script> <!-- getNode같은 걸 가져와서 쓰려면 type="module"을 적어야함 -->
+  <script type="module" src="./js/productDetail/productDetail_my.js"></script> <!-- getNode같은 걸 가져와서 쓰려면 type="module"을 적어야함 -->
+  <script type="module" src="./js/productDetail/productDetail_dr.js"></script> <!-- getNode같은 걸 가져와서 쓰려면 type="module"을 적어야함 -->
   <script src="./js/main.js" type="module"></script>
   <script type="module">
     const swiper = new Swiper(".mySwiper", {
@@ -791,14 +791,15 @@
       </div>
     </div>
     
-  <div class="product_review_body">
-    <div class="product_review_notice">
-      <div class="notice_header">
-        <span class="notice_badge">
-          공지
-        </span>
-        <button class="notice_title collapsible">금주의 베스트 후기 안내</button>
-      </div> 
+    <div class="product_review_body">
+      <div class="product_review_notice">
+        <div class="notice_header">
+          <span class="notice_badge">
+            공지
+          </span>
+          <button class="notice_title collapsible">금주의 베스트 후기 안내</button>
+        </div> 
+      </div>
       <div class="notice_content folded">  
           <img class="quest_icon" src="./assets/icons/Icon/question.svg" alt=""/>
           <div class="question">
@@ -1002,8 +1003,8 @@
       </ul>
     </section>
 
-  <!-- 문의 테이블  -->
-  <div class="swiper mySwiper">
+    <!-- 문의 테이블  -->
+    <div class="swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
 
@@ -1164,7 +1165,8 @@
     <button class="bg_arrow_prev swiper-button-prev" aria-label="previous_page"></button>
     <button class="bg_arrow_next swiper-button-next" aria-label="next_page"></button>
   </div>
-</div>
+    </div>
+  </div>
 
   <!-- 창환님 코드 영역-->
   <footer class="footer_wrap">
