--- a/client/cart.html
+++ b/client/cart.html
@@ -38,13 +38,9 @@
             <a href="#">회원가입</a>
           </li>
 
-          <span class="top_bar">|</span>
-
           <li class="topbtn_login">
             <a href="#">로그인</a>
           </li>
-
-          <span class="top_bar">|</span>
 
           <li class="topbtn_cs">
             <a href="#">
@@ -97,7 +93,7 @@
               <legend>검색</legend>
               <div class="searchForm_group">
                 <div class="search_form">
-                  <label for="search" class="a11yHidden">검색어</label>
+                  <label for="search" class="a11y_hidden">검색어</label>
                   <input
                     id="search"
                     class="search_input"
@@ -107,16 +103,36 @@
                     name="search"
                   />
                 </div>
-                <button class="search_btn" type="submit"></button>
+                <button
+                  class="search_btn"
+                  type="submit"
+                  aria-label="검색어에 입력한 내용을 제출할 수 있게 해주는 버튼"
+                ></button>
               </div>
             </fieldset>
           </form>
         </article>
 
         <article class="icon_wrap">
-          <a class="icon_location" href="#"></a>
-          <a class="icon_heart" href="#"></a>
-          <a class="icon_cart" href="#"></a>
+          <div class="icon_location">
+            <div class="location_box">
+              <p class="location_text">
+                배송지를 등록하고<br />
+                구매가능한 상품을 확인하세요
+              </p>
+              <button class="location_button">로그인</button>
+            </div>
+          </div>
+          <a
+            class="icon_heart"
+            href="#"
+            aria-label="찜한 상품들의 목록을 보러갈 수 있는 아이콘"
+          ></a>
+          <a
+            class="icon_cart"
+            href="#"
+            aria-label="장바구니에 담아둔 상품 목록을 보러갈 수 있는 아이콘"
+          ></a>
         </article>
       </section>
 
@@ -339,7 +355,7 @@
                       name="sub_check"
                       checked
                     />
-                    <label for="sub_check1" class="a11yHidden">선택하기</label>
+                    <label for="sub_check1" class="a11y_hidden">선택하기</label>
 
                     <a href="#" class="product_img">
                       <img
@@ -388,7 +404,7 @@
                       name="sub_check"
                       checked
                     />
-                    <label for="sub_check2" class="a11yHidden">선택하기</label>
+                    <label for="sub_check2" class="a11y_hidden">선택하기</label>
 
                     <a href="#" class="product_img">
                       <img
@@ -453,7 +469,7 @@
                       name="sub_check"
                       checked
                     />
-                    <label for="sub_check3" class="a11yHidden">선택하기</label>
+                    <label for="sub_check3" class="a11y_hidden">선택하기</label>
 
                     <a href="#" class="product_img">
                       <img
@@ -605,10 +621,12 @@
 
             <div class="question_email">
               <p class="first">
-                비회원 문의 : <a href="">help@karlycorp.com</a>
+                비회원 문의 :
+                <a href="mailto:help@karlycorp.com">help@karlycorp.com</a>
               </p>
               <p class="second">
-                비회원 대량주문 문의 : <a href="">help@karlycorp.com</a>
+                비회원 대량주문 문의 :
+                <a href="mailto:help@karlycorp.com">help@karlycorp.com</a>
               </p>
             </div>
           </div>
@@ -646,28 +664,48 @@
               ><span class="footer_bar">|</span>제휴문의 :
               <a href="#">business@karlycorp.com</a>
             </p>
-            <p>채용문의 : recruit@karlycorp .com</p>
+            <p>채용문의 : recruit@karlycorp.com</p>
             <p>팩스 : 070 - 7500 - 6098</p>
           </div>
 
           <div class="company_sns_wrap">
-            <a class="company_sns" href="#">
+            <a
+              class="company_sns"
+              href="#"
+              aria-label="회사 소식을 전하는 소셜서비스 네이버 블로그에 연결"
+            >
               <img src="./assets/icons/sns/blog.png" alt="" />
             </a>
 
-            <a class="company_sns" href="#">
+            <a
+              class="company_sns"
+              href="#"
+              aria-label="회사 소식을 전하는 소셜서비스 페이스북에 연결"
+            >
               <img src="./assets/icons/sns/faceBook.png" alt="" />
             </a>
 
-            <a class="company_sns" href="#">
+            <a
+              class="company_sns"
+              href="#"
+              aria-label="회사 소식을 전하는 소셜서비스 인스타그램에 연결"
+            >
               <img src="./assets/icons/sns/instagram.png" alt="" />
             </a>
 
-            <a class="company_sns" href="#">
+            <a
+              class="company_sns"
+              href="#"
+              aria-label="회사 소식을 전하는 소셜서비스 네이버 포스트에 연결"
+            >
               <img src="./assets/icons/sns/post.png" alt="" />
             </a>
 
-            <a class="company_sns" href="#">
+            <a
+              class="company_sns"
+              href="#"
+              aria-label="회사 소식을 전하는 소셜서비스 유튜브에 연결"
+            >
               <img src="./assets/icons/sns/youtube.png" alt="" />
             </a>
           </div>
