--- a/client/register.html
+++ b/client/register.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
   <html lang="ko-KR">
   <head>
-    <meta http-equiv="Content-Type" charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="keywords" content="회원가입"/>
+    <meta name="description" content="회원가입을 하는 페이지 입니다.">
+    <meta name="og:type" content="website" />
+    <title>회원가입</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/register.css"/>
     <link rel="stylesheet" href="./css/common.css"/>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="./js/register/register.js" defer></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-    <title>회원가입</title>
   </head>
 <body>
   <header class="header_wrap">
@@ -83,7 +87,7 @@
             <legend>검색</legend>
             <div class="searchForm_group">
               <div class="search_form">
-                <label for="search" class="a11yHidden">검색어</label>
+                <label for="search" class="a11y_hidden">검색어</label>
                 <input id="search" class="search_input" type="search" required placeholder="검색어를 입력해주세요" name="search"/>
               </div>
               <button class="search_btn" type="submit" aria-label="검색어에 입력한 내용을 제출할 수 있게 해주는 버튼"></button>
@@ -94,9 +98,10 @@
 
       <article class="icon_wrap">
         <div class="icon_location">
-          <!--<div class="location_box">
-            감사합니다 고객님 ㅎㅇㅎㅇ
-          </div>-->
+          <div class="location_box">
+            <p class="location_text">배송지를 등록하고<br/> 구매가능한 상품을 확인하세요</p>
+            <button class="location_button">로그인</button>
+          </div>
         </div>
         <a class="icon_heart" href="#" aria-label="찜한 상품들의 목록을 보러갈 수 있는 아이콘"></a>
         <a class="icon_cart" href="#" aria-label="장바구니에 담아둔 상품 목록을 보러갈 수 있는 아이콘"></a>
@@ -299,7 +304,7 @@
             <legend>아이디</legend>
             <div class="register_group">
               <div class="register_input">
-                <label for="id" class="a11yHidden">아이디</label>
+                <label for="id" class="a11y_hidden">아이디</label>
                 <input id="id" class="register_common" type="text" required placeholder="아이디를 입력해주세요" name="id" minlength="4" maxlength="20"/>
               </div>
             </div>
@@ -318,7 +323,7 @@
             <legend>비밀번호</legend>
             <div class="register_group">
               <div class="register_input">
-                <label for="password" class="a11yHidden">비밀번호</label>
+                <label for="password" class="a11y_hidden">비밀번호</label>
                 <input id="password" class="register_common" type="password" required placeholder="비밀번호를 입력해주세요" name="password" minlength="8" maxlength="20"/>
               </div>
             </div>
@@ -336,7 +341,7 @@
             <legend>비밀번호 확인</legend>
             <div class="register_group">
               <div class="register_input">
-                <label for="password_check" class="a11yHidden">비밀번호 확인</label>
+                <label for="password_check" class="a11y_hidden">비밀번호 확인</label>
                 <input id="password_check" class="register_common" type="password" required placeholder="비밀번호를 한번 더 입력해주세요" name="password_check"/>
               </div>
             </div>
@@ -354,7 +359,7 @@
             <legend>이름</legend>
             <div class="register_group">
               <div class="register_input">
-                <label for="name" class="a11yHidden">이름</label>
+                <label for="name" class="a11y_hidden">이름</label>
                 <input id="name" class="register_common" type="text" required placeholder="이름을 입력해주세요" name="name"/>
               </div>
             </div>
@@ -371,7 +376,7 @@
             <legend>이메일</legend>
             <div class="register_group">
               <div class="register_input">
-                <label for="email" class="a11yHidden">이메일</label>
+                <label for="email" class="a11y_hidden">이메일</label>
                 <input id="email" class="register_common" type="text" required placeholder="예) marketkarly@karly.com" name="email"/>
               </div>
             </div>
@@ -391,7 +396,7 @@
             <legend>휴대폰</legend>
             <div class="register_group">
               <div class="register_input">
-                <label for="phone" class="a11yHidden">휴대폰</label>
+                <label for="phone" class="a11y_hidden">휴대폰</label>
                 <input id="phone" class="register_common" type="text" required placeholder="숫자만 입력해주세요." name="phone" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" maxlength="11"/>
               </div>
             </div>
@@ -416,12 +421,12 @@
               <legend>주소</legend>
               <div class="register_group">
                 <div class="register_input">
-                  <label for="address" class="a11yHidden">주소</label>
+                  <label for="address" class="a11y_hidden">주소</label>
                   <input id="address" class="register_common" type="text" readonly placeholder="주소를 검색해 주세요" name="address"/>
                 </div>
 
                 <div class="register_input address_input">
-                  <label for="sub_address" class="a11yHidden">나머지주소</label>
+                  <label for="sub_address" class="a11y_hidden">나머지주소</label>
                   <input id="sub_address" class="register_common" type="text" placeholder="나머지 주소를 입력해주세요" name="sub_address"/>
                 </div>
 
@@ -441,7 +446,7 @@
           <div class="register_group">
             <div class="register_input">
               <label for="male" class="check_label">
-                <input id="male" class="a11yHidden check_common" type="radio" name="gender" value="male" />
+                <input id="male" class="a11y_hidden check_common" type="radio" name="gender" value="male" />
                 <span class="input_checked">
                   <div class="input_inner"></div>
                 </span>
@@ -449,7 +454,7 @@
               </label>
 
               <label for="female" class="check_label">
-                <input id="female" class="a11yHidden check_common" type="radio" name="gender" value="female" />
+                <input id="female" class="a11y_hidden check_common" type="radio" name="gender" value="female" />
                 <span class="input_checked">
                   <div class="input_inner"></div>
                 </span>
@@ -457,7 +462,7 @@
               </label>
 
               <label for="nocheck" class="check_label">
-                <input id="nocheck" class="a11yHidden check_common" type="radio" name="gender" value="nocheck" checked="checked"/>
+                <input id="nocheck" class="a11y_hidden check_common" type="radio" name="gender" value="nocheck" checked="checked"/>
                 <span class="input_checked">
                   <div class="input_inner"></div>
                 </span>
@@ -507,7 +512,7 @@
           <div class="register_group">
             <div class="register_input">
               <label for="recommend" class="check_label">
-                <input id="recommend" class="a11yHidden check_common" type="radio" name="add" value="recommend" />
+                <input id="recommend" class="a11y_hidden check_common" type="radio" name="add" value="recommend" />
                 <span class="input_checked">
                   <div class="input_inner"></div>
                 </span>
@@ -515,7 +520,7 @@
               </label>
 
               <label for="event" class="check_label">
-                <input id="event" class="a11yHidden check_common" type="radio" name="add" value="event" />
+                <input id="event" class="a11y_hidden check_common" type="radio" name="add" value="event" />
                 <span class="input_checked">
                   <div class="input_inner"></div>
                 </span>
@@ -535,7 +540,7 @@
             <legend>주소</legend>
             <div class="register_group">
               <div class="register_input add_input">
-                <label for="add_id" class="a11yHidden">친구 초대 추천인 아이디</label>
+                <label for="add_id" class="a11y_hidden">친구 초대 추천인 아이디</label>
                 <input id="add_id" class="register_common" type="text" placeholder="추천인 아이디를 입력해 주세요." name="add_id"/>
               </div>
               <p class="register_notice id_information">가입 후 7일 내 첫 주문 배송완료시, 친구초대 이벤트 적립금이 지급됩니다.</p>
@@ -554,7 +559,7 @@
             <legend>주소</legend>
             <div class="register_group">
               <div class="register_input add_input">
-                <label for="join_event" class="a11yHidden">참여 이벤트명</label>
+                <label for="join_event" class="a11y_hidden">참여 이벤트명</label>
                 <input id="join_event" class="register_common" type="text" placeholder="참여 이벤트명을 입력해 주세요." name="join_event"/>
               </div>
 
@@ -577,7 +582,7 @@
       <form action="/" id="form_wrap" class="terms_list">
         <div class="terms_box">
           <label for="terms_all" class="terms_all">
-            <input id="terms_all" class="a11yHidden terms_common" type="checkbox" name="terms_all" value="all"/>
+            <input id="terms_all" class="a11y_hidden terms_common" type="checkbox" name="terms_all" value="all"/>
             <i class="terms_checkbox"></i>
             <span class="terms_text all">전체 동의합니다.</span>
           </label>
@@ -588,7 +593,7 @@
 
         <div class="terms_box">
           <label for="terms_use" class="terms_check">
-            <input id="terms_use" class="a11yHidden terms_common" required type="checkbox" value="use"/>
+            <input id="terms_use" class="a11y_hidden terms_common" required type="checkbox" value="use"/>
             <i class="terms_checkbox"></i>
             <span class="terms_text">이용약관 동의 (필수)</span>
           </label>
@@ -599,7 +604,7 @@
 
         <div class="terms_box">
           <label for="terms_privacy" class="terms_check">
-            <input id="terms_privacy" class="a11yHidden terms_common" required type="checkbox" value="privacy"/>
+            <input id="terms_privacy" class="a11y_hidden terms_common" required type="checkbox" value="privacy"/>
             <i class="terms_checkbox"></i>
             <span class="terms_text">개인정보 수집 · 이용 동의 (필수)</span>
           </label>
@@ -610,7 +615,7 @@
 
         <div class="terms_box">
           <label for="terms_receive" class="terms_check" >
-            <input id="terms_receive" class="a11yHidden terms_common" type="checkbox" value="receive"/>
+            <input id="terms_receive" class="a11y_hidden terms_common" type="checkbox" value="receive"/>
             <i class="terms_checkbox"></i>
             <span class="terms_text">무료배송, 할인쿠폰 등 혜택/정보 수신 동의 (선택)</span>
           </label>
@@ -621,7 +626,7 @@
 
         <div class="terms_box">
           <label for="terms_age" class="terms_check">
-            <input id="terms_age" class="a11yHidden terms_common" required type="checkbox" value="age"/>
+            <input id="terms_age" class="a11y_hidden terms_common" required type="checkbox" value="age"/>
             <i class="terms_checkbox"></i>
             <span class="terms_text">본인은 만 14세 이상입니다. (필수)</span>
           </label>
@@ -675,8 +680,8 @@
           </div>
 
           <div class="question_email">
-            <p class="first">비회원 문의 : <a href="">help@karlycorp.com</a></p>
-            <p class="second">비회원 대량주문 문의 : <a href="">help@karlycorp.com</a></p>
+            <p class="first">비회원 문의 : <a href="mailto:help@karlycorp.com">help@karlycorp.com</a></p>
+            <p class="second">비회원 대량주문 문의 : <a href="mailto:help@karlycorp.com">help@karlycorp.com</a></p>
           </div>
         </div>
       </article>
