[fix] a11yHidden => a11y_hidden

--- a/client/page_productDetail_my.html
+++ b/client/page_productDetail_my.html
@@ -87,7 +87,7 @@
     </section>
 
     <section class="headContent_wrap container">
-      <div class="modal_cart a11yHidden">
+      <div class="modal_cart a11y_hidden">
           <img class="modal_img" src="assets/tangtang/detail_view.jpg" alt="">
           <div>
             <span class="modal_product_name">[풀무원] 탱탱쫄면 (4개입)</span>
@@ -110,7 +110,7 @@
             <legend>검색</legend>
             <div class="searchForm_group">
               <div class="search_form">
-                <label for="search" class="a11yHidden">검색어</label>
+                <label for="search" class="a11y_hidden">검색어</label>
                 <input id="search" class="search_input" type="search" required placeholder="검색어를 입력해주세요" name="search"/>
               </div>
               <button class="search_btn" type="submit"></button>
@@ -308,7 +308,7 @@
     </nav>
 
     <!-- 스크롤바 내릴때 나타나는 창 -->
-    <div class="small_header_nav a11yHidden">
+    <div class="small_header_nav a11y_hidden">
       <section class="category">
           <a href="#">
             <div class="burger_wrap">
@@ -487,7 +487,7 @@
               <legend>검색</legend>
               <div class="searchForm_group">
                 <div class="small_search_form">
-                  <label for="search" class="a11yHidden">검색어</label>
+                  <label for="search" class="a11y_hidden">검색어</label>
                   <input id="search" class="small_search_input" type="search" required placeholder="검색어를 입력해주세요" name="search"/>
                   <button class="small_search_btn" type="submit"></button>
                 </div>
