[refac] 이미지 최적화 #61

--- a/client/productList.html
+++ b/client/productList.html
@@ -2,6 +2,7 @@
 <html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
+    <title>마켓칼리</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
@@ -12,7 +13,6 @@
     <link rel="stylesheet" href="./css/common.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="./js/productList/productList.js" type="module"></script>
-    <title>마켓칼리</title>
   </head>
 
   <body>
@@ -645,7 +645,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/thumbnail/product03.png"
+                  src="./assets/thumbnail/product03.webp"
                   alt="유기농 밀키프린스 현미 2종"
                 />
 
@@ -676,7 +676,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/kangnam/thumbnail.jpg"
+                  src="./assets/kangnam/thumbnail.webp"
                   alt="[강남면옥] 소갈비찜"
                 />
 
@@ -708,7 +708,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/jukkumi/thumbnail.jpg"
+                  src="./assets/jukkumi/thumbnail.webp"
                   alt="[홍대주꾸미] 주꾸미 볶음 300g"
                 />
 
@@ -743,7 +743,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/thumbnail/product01.png"
+                  src="./assets/thumbnail/product01.webp"
                   alt="[풀무원]탱탱쫄면(4개입)"
                 />
 
@@ -774,7 +774,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/thumbnail/product02.png"
+                  src="./assets/thumbnail/product02.webp"
                   alt="[온더바디] 죠르디 시카 자석 선쿠션"
                 />
 
@@ -807,7 +807,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/thumbnail/product04.png"
+                  src="./assets/thumbnail/product04.webp"
                   alt="[프로쉬] 베이비 세탁세"
                 />
 
@@ -843,7 +843,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/thumbnail/product03.png"
+                  src="./assets/thumbnail/product03.webp"
                   alt="유기농 밀키프린스 현미 2종"
                 />
 
@@ -874,7 +874,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/kangnam/thumbnail.jpg"
+                  src="./assets/kangnam/thumbnail.webp"
                   alt="[강남면옥] 소갈비찜"
                 />
 
@@ -906,7 +906,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/jukkumi/thumbnail.jpg"
+                  src="./assets/jukkumi/thumbnail.webp"
                   alt="[홍대주꾸미] 주꾸미 볶음 300g"
                 />
 
@@ -941,7 +941,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/thumbnail/product01.png"
+                  src="./assets/thumbnail/product01.webp"
                   alt="[풀무원]탱탱쫄면(4개입)"
                 />
 
@@ -972,7 +972,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/thumbnail/product02.png"
+                  src="./assets/thumbnail/product02.webp"
                   alt="[온더바디] 죠르디 시카 자석 선쿠션"
                 />
 
@@ -1005,7 +1005,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/thumbnail/product04.png"
+                  src="./assets/thumbnail/product04.webp"
                   alt="[프로쉬] 베이비 세탁세"
                 />
 
@@ -1040,7 +1040,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/thumbnail/product03.png"
+                  src="./assets/thumbnail/product03.webp"
                   alt="유기농 밀키프린스 현미 2종"
                 />
 
@@ -1071,7 +1071,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/kangnam/thumbnail.jpg"
+                  src="./assets/kangnam/thumbnail.webp"
                   alt="[강남면옥] 소갈비찜"
                 />
 
@@ -1103,7 +1103,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/jukkumi/thumbnail.jpg"
+                  src="./assets/jukkumi/thumbnail.webp"
                   alt="[홍대주꾸미] 주꾸미 볶음 300g"
                 />
 
@@ -1138,7 +1138,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/thumbnail/product01.png"
+                  src="./assets/thumbnail/product01.webp"
                   alt="[풀무원]탱탱쫄면(4개입)"
                 />
 
@@ -1169,7 +1169,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/thumbnail/product02.png"
+                  src="./assets/thumbnail/product02.webp"
                   alt="[온더바디] 죠르디 시카 자석 선쿠션"
                 />
 
@@ -1202,7 +1202,7 @@
             <li class="product_content">
               <div class="product_box">
                 <img
-                  src="./assets/thumbnail/product04.png"
+                  src="./assets/thumbnail/product04.webp"
                   alt="[프로쉬] 베이비 세탁세"
                 />
 
