[fix] onclick 을 js함수로 빼기 (미완성)

--- a/client/page_productDetail_my.html
+++ b/client/page_productDetail_my.html
@@ -619,10 +619,10 @@
   </main>
   
   <nav class="product_navigation">
-    <button onclick="goToScroll('description')" class="btn_product_description" aria-label="상품설명">상품설명</button>
-    <button onclick="goToScroll('detail_information')" class="btn_detail_information" aria-label="상세정보">상세정보</button>
-    <button onclick="goToScroll('review_wrapper')" class="btn_product_review" aria-label="상품후기">후기<span>(0)</span></button>
-    <button onclick="goToScroll('inquiry_wrapper')" class="btn_product_inquiry" aria-label="상품문의">문의</button>
+    <button class="btn_product_description" aria-label="상품설명">상품설명</button>
+    <button class="btn_detail_information" aria-label="상세정보">상세정보</button>
+    <button class="btn_product_review" aria-label="상품후기">후기<span>(0)</span></button>
+    <button class="btn_product_inquiry" aria-label="상품문의">문의</button>
   </nav> <!-- /product_navigation -->
 
   <section class="description">
